--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -99,5 +99,23 @@
         font-weight: 400;
       }
     }
+    & img {
+      object-fit: cover;
+      z-index: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100vw;
+      height: 100vh;
+      @media screen and (max-width: $medium) {
+        position: relative;
+        top: 50%;
+        height: 50vh;
+        font-size: 1em;
+        text-align: center;
+        font-weight: 400;
+      }
+    }
   }
 }
