--- a/scss/components/_trapezoid.scss
+++ b/scss/components/_trapezoid.scss
@@ -25,6 +25,37 @@
       font-size: 3.5em;
     }
   }
+  & .homeIcon {
+    font-size: 30px;
+    color: #32867b;
+    margin: auto;
+    padding-right: 10px;
+    margin-bottom: 10px;
+    padding-top: 0px;
+    padding-left: 10px;
+    transform: translateY(2px);
+  }
+  & .homeContainer {
+    margin-bottom: 10px;
+    display: flex;
+  }
+  & .homeButton {
+    padding: 10px 20px;
+    border-radius: 20px;
+    background-color: #efefef;
+    & h3 {
+      font-size: 0.8em;
+      padding-right: 10px;
+    }
+  }
+  & a {
+    font-size: 3.5em;
+    margin: auto;
+    grid-row: 1;
+    z-index: 2;
+    grid-column: 1;
+    color: #32867b;
+  }
   & img {
     object-fit: contain;
     width: 100vw;
