--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -2,9 +2,9 @@
 @import '../abstracts/all';
 
 body {
-  font-family: 'Barlow Semi Condensed', -apple-system, Roboto, BlinkMacSystemFont,
-    'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Barlow Semi Condensed', -apple-system, Roboto,
+    BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   color: $text-light;
