--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,6 +19,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Asap&family=JetBrains+Mono&display=swap");
 * {
   box-sizing: border-box;
   margin: 0; }
@@ -388,6 +390,32 @@ button:hover .button-text {
     @media screen and (max-width: 500px) {
       .trap-container h1 {
         font-size: 3.5em; } }
+  .trap-container .homeIcon {
+    font-size: 30px;
+    color: #32867b;
+    margin: auto;
+    padding-right: 10px;
+    margin-bottom: 10px;
+    padding-top: 0px;
+    padding-left: 10px;
+    transform: translateY(2px); }
+  .trap-container .homeContainer {
+    margin-bottom: 10px;
+    display: flex; }
+  .trap-container .homeButton {
+    padding: 10px 20px;
+    border-radius: 20px;
+    background-color: #efefef; }
+    .trap-container .homeButton h3 {
+      font-size: 0.8em;
+      padding-right: 10px; }
+  .trap-container a {
+    font-size: 3.5em;
+    margin: auto;
+    grid-row: 1;
+    z-index: 2;
+    grid-column: 1;
+    color: #32867b; }
   .trap-container img {
     object-fit: contain;
     width: 100vw;
@@ -563,6 +591,51 @@ button:hover .button-text {
     .contact-container .credit a:nth-child(1) {
       font-size: 0.8em;
       padding-right: 8px; }
+
+.left-arrow {
+  position: fixed;
+  left: 2%;
+  top: 50%; }
+
+.right-arrow {
+  position: fixed;
+  transform: rotate(180deg);
+  right: 2%;
+  top: 50%; }
+
+.guitar-container .guitar-grid {
+  max-width: 1080px;
+  padding: 0;
+  margin: -100px auto auto auto;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: minmax(400px, auto-fit) minmax(400px, auto-fill); }
+  .guitar-container .guitar-grid p {
+    padding: 30px;
+    font-weight: 100;
+    font-size: 30px;
+    line-height: 1.3;
+    color: #000;
+    height: auto;
+    margin: auto; }
+  .guitar-container .guitar-grid img {
+    padding: 50px;
+    width: 100%;
+    border-radius: 5em;
+    height: auto;
+    margin: auto; }
+  .guitar-container .guitar-grid .img1 {
+    object-fit: cover;
+    max-height: 70%;
+    width: 100%; }
+  .guitar-container .guitar-grid .img2 {
+    margin-top: -100px; }
+  .guitar-container .guitar-grid .p2 {
+    margin-top: -100px; }
+
+.guitar-container .last-grid-item {
+  margin-top: -50px;
+  grid-template-rows: auto; }
 
 .header-container {
   width: 100%;
