--- a/scss/components/_projectCard.scss
+++ b/scss/components/_projectCard.scss
@@ -126,7 +126,7 @@
     width: 100%;
     height: 100%;
     justify-content: center;
-    & button {
+    & a {
       left: 50%;
       transform: translateX(-50%);
       margin-top: 100px;
