--- a/scss/components/_projectCard.scss
+++ b/scss/components/_projectCard.scss
@@ -126,8 +126,11 @@
     width: 100%;
     height: 100%;
     justify-content: center;
+    padding-left: 25%;
+    padding-top: 50px;
+
     & a {
-      left: 50%;
+      //left: 50%;
       transform: translateX(-50%);
       margin-top: 100px;
       font-size: 2.5em;
