--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -1,5 +1,9 @@
 @import '../abstracts/all.scss';
 .hero-container {
+  // This was Eric's idea to fix the background loading bug
+  background-image: url(../../assets/still-bg-img.JPG);
+  background-size: auto 100%;
+  background-position: center;
   width: 100vw;
   height: 100vh;
   @media screen and (max-width: $medium) {
@@ -80,6 +84,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+
 
     @media screen and (max-width: $medium) {
       height: 50vh;
